--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,28 +1,32 @@
 {% if site.footer_scripts %}
-  {% for script in site.footer_scripts %}
-    {% if script contains "://" %}
-      {% capture script_path %}{{ script }}{% endcapture %}
-    {% else %}
-      {% capture script_path %}{{ script | relative_url }}{% endcapture %}
-    {% endif %}
-    <script src="{{ script_path }}"></script>
-  {% endfor %}
+{% for script in site.footer_scripts %}
+{% if script contains "://" %}
+{% capture script_path %}{{ script }}{% endcapture %}
 {% else %}
-  <script src="{{ '/assets/js/main.min.js' | relative_url }}"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.7.1/js/all.js" integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7" crossorigin="anonymous"></script>
+{% capture script_path %}{{ script | relative_url }}{% endcapture %}
+{% endif %}
+<script src="{{ script_path }}"></script>
+{% endfor %}
+{% else %}
+<script src="{{ '/assets/js/main.min.js' | relative_url }}"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.7.1/js/all.js"
+  integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7" crossorigin="anonymous"></script>
 {% endif %}
 
 {% if site.search == true or page.layout == "search" %}
-  {%- assign search_provider = site.search_provider | default: "lunr" -%}
-  {%- case search_provider -%}
-    {%- when "lunr" -%}
-      {% include_cached search/lunr-search-scripts.html %}
-    {%- when "google" -%}
-      {% include_cached search/google-search-scripts.html %}
-    {%- when "algolia" -%}
-      {% include_cached search/algolia-search-scripts.html %}
-  {%- endcase -%}
+{%- assign search_provider = site.search_provider | default: "lunr" -%}
+{%- case search_provider -%}
+{%- when "lunr" -%}
+{% include_cached search/lunr-search-scripts.html %}
+{%- when "google" -%}
+{% include_cached search/google-search-scripts.html %}
+{%- when "algolia" -%}
+{% include_cached search/algolia-search-scripts.html %}
+{%- endcase -%}
 {% endif %}
 
 {% include analytics.html %}
 {% include /comments-providers/scripts.html %}
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
